frontend/src/components/App.css
@font-face {
  font-family: "Gilroy";
  src: url("../../public/fonts/Gilroy-Light.woff") format("woff");
  font-weight: 300;
}
@font-face {
  font-family: "Gilroy";
  src: url("../../public/fonts/Gilroy-Medium.woff") format("woff");
  font-weight: 500;
}
@font-face {
  font-family: "Gilroy";
  src: url("../../public/fonts/Gilroy-Bold.woff") format("woff");
  font-weight: 700;
}
@font-face {
  font-family: "Gilroy";
  src: url("../../public/fonts/Gilroy-Heavy.woff") format("woff");
  font-weight: 900;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Gilroy", sans-serif;
  background-image: url("../../public/images/blog-bg.png");
  background-repeat: no-repeat;
  background-size: cover;
}
html {
  position: relative;
  min-height: 100%;
}

h2,
h3 {
  margin-bottom: 1rem;
}
@media only screen and (max-width: 480px) {
  h2,
  h3 {
    font-size: 1.5rem;
  }
  p {
    font-size: 1rem;
  }
}
.post-content {
  max-width: 100%;
  word-wrap: break-word;
  overflow-wrap: break-word;
  white-space: pre-line;
}
.section-title {
  width: 90%;
  margin: 0.2rem 0;
  text-align: left;
  font-weight: 400;
  letter-spacing: 0.5rem;
  font-size: 3rem;
  float: left;
  text-decoration: #797a71 wavy underline;
}
@media only screen and (max-width: 480px) {
  .section-title {
    font-size: 2rem;
    margin: 2rem 0;
  }
  .form-title {
    width: 90vw !important;
  }
}

/* Input and Forms */

input,
textarea {
  border: none;
  font-size: 1rem;
  color: black;
  opacity: 0.7;
  padding: 1rem;
  border-radius: 1rem;
}

form {
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: space-between;
}

.post,
.login-form,
.signup-form {
  position: relative;
  background-color: rgba(236, 236, 236, 0.652);
  padding: 2rem;
  color: black;
  border-radius: 2rem;
}
.login-form,
.signup-form {
  width: 40vw;
  height: 500px;
}
.signup-form {
  min-height: 600px;
}
.post {
  width: 70vw;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.post-edit-form form {
  min-height: 400px;
  gap: 2rem;
}
.post-edit-form {
  min-height: 500px;
}
.login-wrapper,
.signup-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 18rem;
  margin-bottom: 30rem;
  gap: 10rem;
}
.signup-wrapper {
  margin-top: 15rem;
  flex-direction: column;
  gap: 3rem;
}
@media only screen and (max-width: 480px) {
  .signup-form {
    height: 650px;
    padding: 2rem 1rem;
  }
  .login-wrapper,
  .signup-wrapper {
    gap: 4rem;
    margin-top: 10rem;
    flex-direction: column;
  }
}

.google-signin-container {
  border: 1px solid white;
  display: flex;
  border-radius: 1.5rem;
  padding: 0.3rem 0.8rem;
}
.google-signin-container a,
.divider-container p {
  color: white;
}
.google-signin-container:hover {
  background-color: red;
  cursor: pointer;
  transition: all 1s ease-in-out;
}
.google-signin-container a:hover {
  color: white;
}
@media only screen and (max-width: 480px) {
  .google-signin-container a {
    font-size: 1rem;
  }
}

/* divider line */
.hr-text {
  border: 0;
  line-height: 1em;
  position: relative;
  width: 1.5em;
  height: 300px;
  font-size: 1.2rem;
}

.hr-text::before {
  content: "";
  background-color: bisque;
  position: absolute;
  left: 50%;
  height: 100%;
  width: 2px;
}

.hr-text::after {
  content: attr(data-content);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 1rem;
  border-radius: 3rem;
  color: white;
  background-color: #080b01;
}
.signup-wrapper .hr-text {
  width: 40%;
  height: 2rem;
}
.signup-wrapper .hr-text::before {
  width: 100%;
  height: 4px;
  top: 50%;
  left: 0;
}
.signup-wrapper .hr-text::after {
  background-color: #cfcbca;
  padding: 0.5rem;
}
@media only screen and (max-width: 480px) {
  .hr-text {
    width: 90%;
    height: 1rem;
  }
  .hr-text::before {
    width: 100%;
    height: 2px;
    top: 50%;
    left: 0;
  }
  .signup-wrapper .hr-text {
    width: 90%;
    height: 2rem;
  }
}

input:focus,
textarea:focus {
  outline: none;
}
input#profile-pic {
  padding: 0.2rem;
  padding-left: 0;
}
input[type="submit"] {
  font-size: 1rem;
  width: 6rem;
  border-radius: 1rem;
  background-color: #797a71;
  color: white;
  opacity: 1;
  border: none;
}
input[type="submit"]:hover {
  cursor: pointer;
  background-color: #c1ae95;
  transition: all 0.5s ease-in;
}

.btn-container button {
  padding: 1rem 2rem;
  border: none;
  border-radius: 2rem;
}
.btn-container button:last-child {
  background-color: #797a71;
  color: white;
}
.btn-container button:hover {
  cursor: pointer;
  opacity: 0.8;
}
.cancel-btn {
  height: 50px;
  width: 6rem;
  font-size: 1rem;
  border-radius: 1rem;
  background-color: white;
  color: #797a71;
  text-align: center;
  padding: 0;
  line-height: 50px;
}
.cancel-btn:hover {
  background-color: #c1ae95;
  color: white;
  border: none;
  transition: all 0.5s ease-in;
}
.form-container form {
  display: flex;
  flex-direction: column;
  width: 70vw;
  gap: 2rem;
  border: 5px solid #797a71;
  padding: 2rem;
  margin-bottom: 10rem;
  border-radius: 2rem;
}
@media only screen and (max-width: 480px) {
  .form-container form {
    width: 90vw;
  }
}
.form-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 70vw;
}
textarea {
  height: 200px;
}
footer {
  display: flex;
  height: 50px;
  justify-content: center;
  align-items: center;
  position: absolute;
  width: 100%;
  bottom: 0;
  color: white;
  font-size: 1.2rem;
  background-color: #797a71;
}
/* Navigation */
header {
  position: absolute;
  top: 0;
  right: 0;
}

@media only screen and (max-width: 480px) {
}
.desktop-nav {
  display: flex;
  flex-direction: row;
  align-items: center;
  transition: all 1s ease-in-out;
  height: 80px;
  border-radius: 4rem;
  margin: 2rem 6rem;
}
/* ... */

